# Smorphi-Autonomous-ROS2

./: README.md
src/esp_driver/: CMakeLists.txt  package.xml
src/esp_driver/config/: cartographer.lua  nav2_params.yaml
src/esp_driver/include/esp_driver/: esp_driver.hpp  smorphi_shape.hpp
src/esp_driver/launch/: navigation_launcher.py  slam_launcher.py  stage_launcher.py
src/esp_driver/launch/navigation_bringup/: bringup_launch.py  localization_launch.py  navigation_launch.py  slam_launch.py
src/esp_driver/map/: map.pgm  map.yaml
src/esp_driver/scripts/: smorphi_controller.py
src/esp_driver/src/: esp_driver.cpp
src/esp_driver/utils/: convert_png_to_binary.py  convert_png_to_map.py
src/waypoint_navigator/: CMakeLists.txt  package.xml
src/waypoint_navigator/config/: area.yaml
src/waypoint_navigator/include/waypoint_navigator/: WaypointNavigator.hpp  wavefront.hpp
src/waypoint_navigator/launch/: wp_launcher.py
src/waypoint_navigator/src/: WaypointNavigator.cpp  wavefront.cpp  waypoint_navigator_node.cpp
